vlib/v/checker/tests/struct_assigned_to_pointer_to_struct.out
vlib/v/checker/tests/struct_assigned_to_pointer_to_struct.vv:5:4: error: mismatched types `&Foo` and `Foo`
    3 | fn main() {
    4 |     mut f := &Foo{ 10 }
    5 |     f = Foo{ x: 20 }
      |       ^
    6 |     _ = f
    7 | }